server/compilers/goLiteJS/src/test/ml1/invalid/decl35.go
// use curly braces in distributed type declaration
package main

type {
    num int
    float double
}
